# py-logger-alert

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
py_logger_alert/: __init__.py
